css/style.css
html body {
	font-family: 'Montserrat', sans-serif;
	font-size: 14px;
	font-weight: 400;
}
.navbar {
	margin-bottom: 0;
	border-radius: 0;
}
.navbar-brand, .navbar-collapse, .navbar-nav > li{
	height: 65px;
}
.navbar-nav > li > a {
	height: 65px;
	padding-top: 25px;
}
.navbar-nav li > a {	
	cursor: pointer;
}

.navbar-nav li > a > i, span#profile  {
	margin-right: 10px;
}
.navbar-brand {
	cursor: default;
}
.navbar-brand>img {
	margin-left: 20px;
	width: 15%;
	min-width: 155px;
	margin-top: -11px;
	margin-right: -100px;
	cursor: pointer;
}
.navbar p {
	height: 65px;
	padding-top: 25px;
	padding-left: 100px;
	color: white;
	font-style: italic;
	cursor: default;
}

div#mainbody {
	width: 100%;
	height: 90%;
	min-height: 620px;
	overflow: hidden;
	background-color: #222222;
	color: #0858B2;
}

div#editor, div#timeline, div#popular {
	float: left;
	width: 60%;
	height: 100%;
	min-height: 620px;
	margin-right: 1%;
	background-color: #B6D5FD;
	padding: 1.5%;	
	overflow: hidden;
	position: relative;
}
div#preview {
	width: 39%;
	height: 100%;
	min-height: 620px;
	background-color: #E9F0F5;
}
div#preview.showContent {
	padding: 10px 20px;
	overflow-x: auto; 
	overflow-y: auto;
	font-family: 'Lucida Console', Monaco, monospace;
}

div#editor .fa {
	color: #0858B2;
}
div#editor>input.form-control {
	width: 80%;
	float: left;
	margin-right: 20px;
}
div#editor>p {
	width: 40%;
	display: inline;
	line-height: 34px;
}
div#editor>p a {
	width: 34px;
	height: 34px;
	padding: 5px;

}
div#editor>p .fa{
	color: white;
	font-size: 24px;
}
div#editor .fa-delete{
	color: white;
}

div#editor .btn-delete{
	background-color: #B6D5FD;
	padding:5px 10px 5px 10px;
	border: 1px solid;
	border-radius: 5px;
	border-color: white;
	margin-left: 10px;
	margin-right: 10px;
}

div#editor .btn-delete:hover{
	background-color: #FF4D4D;
	border-color: #FF4D4D;
}

div#data-field {
	margin: 2% 0.5% 1%;
	max-height: 75%;
	width: 100%;
	overflow-x: hidden;
	overflow-y: auto;
}
div.data-block {
	margin: 1% 0;
}

div.column .fa-cog{
	position: absolute;
	top: -4px;
	left: 75%;
	opacity: 0.6;
	cursor: pointer;
}
div.column {
	position: relative;
	width: 30%;
	display: inline;
}
.order {
	float: left;
	top: 4px;
}

.column>input {
	text-align: left;
	margin: 0 1%;
	width: 160px; 
	text-transform: capitalize;
}

p.group-info {
	margin: 8px 40px;
}

div#add {
	position: absolute;
}

div#add.hasInput{
	width: 200px;
	bottom: 12%;
}

div#add.empty{
	width: 450px;
	top: 40%;
	left: 15%;
}

div#add p {
	line-height: 34px;
	cursor: pointer;
}

div#add p.hasInput {
	margin-top: 1%;
	margin-left: 40px;
  	font-size: 17px;
}

div#add p.empty {
	margin-top: 5%;
	margin-left: 80px;
	font-size: 27px;
}

div#groupbutton {
	width: 200px;
	position: absolute;
	bottom: 10%;
	left: 300px;
}

div#add>i, div#groupbutton>i {
	margin: 4px;
	padding-left: 2px;
	float: left;
	cursor: pointer;
}

div#groupbutton>p {
	margin-top: 1%;
	margin-left: 40px;
  	line-height: 34px;
  	font-size: 17px;
  	cursor: pointer;
}

div#export{
	width: 80%;
	overflow: hidden;
	font-size: 18px;
	position: absolute;
	bottom: 10%;
}
div#export>p {
	margin: 0 5px 5px;
}
div#export>ul {
	padding: 0;
}
div#export>ul>li{
	list-style: none;
	text-align: center;
	cursor: pointer;
	font-size: 14px;
	margin: 0 3px 0 0;
	padding: 3px 0 0 0;
	float: left;
	width: 90px;
	border-top-left-radius: 8px;
	border-top-right-radius: 8px;
	background-color: #efefef;
	line-height: 30px;
}
div#export>ul>li.active {
	background-color: #E1E6FA;
	cursor: inherit;
}
div.setting {
	padding: 1%;
	clear: both;
	background-color: #E1E6FA;
}
div.setting>p, div.setting>span {
	font-size: 14px;
	font-family: 'Open Sans',sans-serif;
	margin-bottom: 5px;
}
div.setting>input {
	width: 60px;
	height: 24px;
	display: inline-block;
	margin-left: 1%;
}
div#generate {
	margin-top: 5px;
	position: absolute;
	width: 140px;
	bottom: 5%;
}
div#generate>button, div#saveDiv>button {
	font-size: 17px;
	font-weight: 600;
	text-align: left;
	margin: 3px 0;
	padding: 5px 10px;
	width: 100%;
	border: 2px solid #0858B2;
 	background-color: #2272CB;
 	color: white;
}
div#generate .fa-download:before, div#saveDiv .fa-tags:before{
	color: white;
}
div#generate>span, div#saveDiv>span {
	position: relative;
}
div#generate i {
	position: absolute;
	bottom: 15px;
	left: 115px;
	cursor: pointer;
}
div#saveDiv {
	position: absolute;
	bottom: 5%;
	margin-top: 5px;
	left: 170px;
	margin-left: 10px;
	width: 130px;
}
div#saveDiv i {
	position: absolute;
	bottom: 15px;
	left: 105px;
	cursor: pointer;
}
div.savewindow {
	position: absolute;
	width: 400px;
	height: 200px;
	border: 1px solid #ccc;
	border-radius: 5px;
	background-color: #fff;
	padding: 5px 15px 10px;
}
div.cover {
	position: absolute;
	top: 0;
	left: 0;
}
div.savewindow::before {
	position: absolute;
	content: "";
	border-color: transparent #fff transparent transparent ;
	border-width: 7px; 
	border-style: solid;
	right: 100%;
	top:85%;
	width:0;
	height:0;
}
div.savewindow>.buttoncontainer {
	width: 100%;
	text-align: center;
}
div.savewindow button {
	height: 26px;
	width: 50px;
	margin: 0 5px;
	padding: 5px 3px; 
	font-size: 12px;
}
.tagbox, .addtagcontainer, .inputcontainer {
	width: 100%;
	height: 34px;
	clear: both;
}
.tagbox {
	margin-top: 5px;
}
.info {
	width: 100%;
	height: 32px;
	border-radius: 5px;
	border: 1px solid #ccc;
	background-color: aliceblue;
	padding: 5px 0;
	margin: 3px 0 0;
	text-align: center;
}
.inputcontainer {
	width: 100%;
	height: 35px;
	margin: 3px 0 0;
	overflow: hidden;
	border: 1px solid #ccc;
	border-radius: 5px;
	line-height: 28px;
	padding: 0 0 0 2px;
	color: #000;
	cursor: text;
	box-shadow: 0px 0px 3px 0px rgba(0,0,0,0.15) inset;
}

.inputcontainer>input {
	padding: 0;
	border: 0;
	margin-top: 3px;
	box-shadow: none;
	background: none;
	width: 100px;
	overflow: hidden;
	height: 28px;
	margin-left: 5px;
	zoom: 1;
}
.inputcontainer>input:focus{
    outline: 0;
}
div#timeline {
	background-color: #E9F0F5;
	position: relative;
	overflow-x: hidden;
	overflow-y: auto;
}

div.timeline-block::before {
	content: "";
	position: absolute;
	left: 2.4%;
	top: 2%;
	min-height: 100%;
	width: 5px;
	background-color: #D7E4ED;
}
div.timeline-block {
	position: relative;
	cursor: pointer;
	padding:8px 0 12px;  
}
div.timeline-block:first-child {
	margin-top: 0;
}
div.timeline-dot {
	width: 25px;
	height: 25px;
	position: absolute;
	left: 1%;
	top: 12%;
	border-radius: 50%;
	background-color: white;
}
div.timeline-content {
	margin-left: 4em;
	background-color: #BCD8FD;
	border-radius: 5px;
	padding: 0.2em 1em 2.5em;
	position: relative;
	border: 7px solid #BCD8FD;
}
div.timeline-content::before {
	content: "";
	position: absolute;
	right: 101%;
	top: 12%;
	width: 0;
	height: 0;
	border: 10px solid #E9F0F5;
	border-right: 10px solid #BCD8FD;
}
div.timeline-content.selected {
	border-color: #FFFAFA;
}
div.timeline-content.selected::before {
	border-right-color: #FFFAFA;
}
div.timeline-content>h4 {
	margin-right: 10px;
}
div.timeline-content>p {
	font-size: 12px;
	margin-bottom: 5px;
}
div.timeline-content>a>i {
	color: white;
	margin-left: 10px;
	opacity: 1;
	cursor: pointer;
}

#popup {
	border-radius: 7px;
	padding-top: 15px;
	background-color: #E1E6FA;
}
.popup {
	width: 400px;
	border-radius: 5px;
}
div.popup .col-sm-1 {
	padding: 0 5px;
}
.repeattime {
	display: inline;
	width: 20%;
	margin-right: 10px;

}
.repeat {
	display: inline;
}
.row {
	padding-top: 10px;
}
.row div {
	margin-top: 10px;
}
.popup-btn {
	float: right;
}
.popup-btn>button {
	width: 65px;
	padding: 6px;
}
div#popular {
	background-color: #F0F8FF;
}
div#populartable {
	width: 100%;
	max-height: 100%;
	overflow-x: hidden;
	overflow-y: auto;
}
div.popular-block>span {
	width: 100%;
}
div.popular-block>i, div.timeline-content>i {
	float: left;
	color: #FFFFFF;
	font-size: 20px;
	margin: 5px 0;
}
div.popular-block>a, div.timeline-content>a{
	text-decoration: none;
	height: 28px;
	width: auto;
	border-radius: 5px;
	background-color: #FFB6C1;
	color: white;
	float: right;
	padding: 7px 8px;
	margin-left: 7px;
	font-size: 12px;
	cursor: pointer;
}
div.popular-block>a:hover, div.timeline-content>a:hover {
	background-color: #FFC0CB;
}
div.popular-block>a>i{
	color: white;
	margin-left: 10px;
	opacity: 1;
	cursor: pointer;
}
div.popular-block>h4 {
	margin-right: 10px;
}
div.popular-block>p {
	font-size: 12px;
	margin-bottom: 5px;
}
div.popular-block {
	position: relative;
	overflow: auto;
	padding: 5px 10px 5px;
	margin: 10px 0;
	border-radius: 5px;
	width: 100%;
	border: 7px solid #A1CDFF;
	background-color: #A1CDFF;
	cursor: pointer;
}
div.popular-block.selected {
	border-color: #FFFAFA;
}

div#tag {
	position: absolute;
	bottom: 30px;
	width: 95%;
	height: auto;
	height: 25%;
	border: 2px solid #4169E1;
	border-radius: 5px;	
	font-weight: bold;
	padding: 10px 20px;
	overflow: auto;
}
div#tag p {
	font-size: 24px;
	color: #4169E1;
}
div#mainbody .label-size a{
	float: left;
	height: 24px;
	line-height: 24px;
	position: relative;
	font-size: 12px;
	margin: 5px 5px 5px 20px;
	padding: 0 10px 0 12px;
	background-color: #4169E1;
	color: #FFFFFF !important;
	text-decoration: none;
	border-bottom-right-radius: 4px;
	border-top-right-radius: 4px;
	cursor: pointer;
}
div#mainbody .label-size a:before {
	content: "";
	float: left;
	position: absolute;
	top: 0;
	left: -12px;
	width: 0;
	height: 0;
	border-color: transparent #4169E1 transparent transparent;
	border-style: solid;
	border-width: 12px 12px 12px 0;
}
div#mainbody .label-size a:after {
	content: "";
	position: absolute;
	top: 10px;
	left: 0;
	float: left;
	width: 4px;
	height: 4px;
	border-radius: 2px;
	background: #FFFFFF;
	box-shadow: -1px -1px 2px #004977;
}

div#mainbody .label-size a:hover {
	background: #FFFFFF;
	color: #4169E1!important;
}
div#mainbody .label-size a:hover:before{
  border-color: transparent #FFFFFF transparent transparent;
}
div#mainbody .label-size a:hover:after {
	background: #4169E1;
}

div#mainbody .label-size a.selected {
	background: #A1CDFF;
	color: #4169E1!important;
}
div#mainbody .label-size a.selected:before{
  border-color: transparent #A1CDFF transparent transparent;
}
div#mainbody .label-size a.selected:after {
	background: #4169E1;
}

div#popular #show-all, #filter{
	border: 2px solid #4169E1;
	border-radius: 5px;
	height: 26px;
	font-size: 12px;
	margin: 4px 10px;
	padding: 3px;
	color: #4169E1;
	display: inline-block;
	cursor: pointer;
	text-decoration: none;
}

#welcomeMsg {
	margin-top: 20px;
}

/* login loading cover */
.loginLoadingCover {
  display: none;
  position: absolute;
  z-index: 1000;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  background: #222222 url('../img/ajax-loader small.gif') 50% 50% no-repeat;
}

/* dataset preview*/
.dataCollapseButton {
	position: relative;
	top: 19px;
	width: 13px;
	margin-left: -10px;
}

.glowSpan {
	border-width: 1px;
	border-color: rgb(170, 204, 242);
	border-style: solid;
	border-radius: 5px;
	
	-webkit-box-shadow: 0 0 10px rgb(18, 80, 239);
	-moz-box-shadow: 0 0 10px rgb(18, 80, 239);
	box-shadow: 0 0 10px rgb(18, 80, 239);
}

